--- a/src/app/components/header-menu/header-menu.component.css
+++ b/src/app/components/header-menu/header-menu.component.css
@@ -1,13 +1,12 @@
 header{
-    background: #095d40;
-    width: 100%;
+    /*width: 100%;
     height: 40px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 20px;*/
     
     & ul{
         list-style: none;
@@ -19,7 +18,7 @@ header{
         padding-inline: 0;
 
         & li{
-            padding: 10px;
+            /*padding: 10px;*/
         }
         & a{
             color: white;
