--- a/src/app/components/header-menu/header-menu.component.html
+++ b/src/app/components/header-menu/header-menu.component.html
@@ -1,6 +1,16 @@
-<header>
-    <ul>
-        <li><a routerLink="/servicios" routerLinkActive="active" ariaCurrentWhenActive="page">Servicios</a></li>
+<header class="bg-[#095d40] w-full h-10 flex flex-row justify-center
+                items-center pt-5 pb-5">
+    <ul class="gap-3">
+        <li class="p-3">
+            <a 
+            class="text-3xl"
+            routerLink="/servicios" 
+            routerLinkActive="active" 
+            ariaCurrentWhenActive="page"
+            >
+                Servicios
+            </a>
+        </li>
         <li><a href="">Colecciones</a></li>
         <li><a id="title" routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">CASA VERDE</a></li>
         <li><a href="" >Nuestra empresa</a></li>
