--- a/src/app/components/header-menu/header-menu.component.html
+++ b/src/app/components/header-menu/header-menu.component.html
@@ -1,9 +1,9 @@
-<header class="bg-[#095d40] w-full h-10 flex flex-row justify-center
-                items-center pt-5 pb-5">
-    <ul class="gap-3">
-        <li class="p-3">
+<header class="bg-[#095d40] w-full h-auto flex flex-row justify-center
+                items-center p-5 font-['Open_Sans']">
+    <ul class="gap-20 flex flex-row justify-center w-full">
+        <li class="">
             <a 
-            class="text-3xl"
+            class=" text-2xl text-white "
             routerLink="/servicios" 
             routerLinkActive="active" 
             ariaCurrentWhenActive="page"
@@ -11,10 +11,58 @@
                 Servicios
             </a>
         </li>
-        <li><a href="">Colecciones</a></li>
-        <li><a id="title" routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">CASA VERDE</a></li>
-        <li><a href="" >Nuestra empresa</a></li>
-        <li><a href="">Contactos</a></li>
+        <li>
+            <a 
+                class=" text-2xl text-white"
+            >
+                Colecciones
+            </a>
+        </li>
+        <li>
+            <a 
+                class=" text-2xl text-white "
+                href="" 
+            >
+                Nuestra empresa
+            </a>
+        </li>
+        <li>
+            <a 
+                class="p-4 text-4xl text-white ml-20 mr-20
+                        font-serif"
+                id="title" 
+                routerLink="/home" 
+                routerLinkActive="active" 
+                ariaCurrentWhenActive="page"
+            >
+                CASA VERDE
+            </a>
+        </li>
+        
+        <li>
+            <a 
+                class=" text-2xl text-white "
+                href=""
+            >
+                Contactos
+            </a>
+        </li>
+        <li>
+            <a 
+                class=" text-2xl text-white "
+                href=""
+            >
+                Contactos
+            </a>
+        </li>
+        <li>
+            <a 
+                class=" text-2xl text-white "
+                href=""
+            >
+                Contactos
+            </a>
+        </li>
     </ul>
 </header>
 
