--- a/src/app/components/header-menu/header-menu.component.css
+++ b/src/app/components/header-menu/header-menu.component.css
@@ -1,12 +1,12 @@
-header{
-    /*width: 100%;
+/*header{
+    width: 100%;
     height: 40px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     padding-top: 20px;
-    padding-bottom: 20px;*/
+    padding-bottom: 20px;
     
     & ul{
         list-style: none;
@@ -18,7 +18,7 @@ header{
         padding-inline: 0;
 
         & li{
-            /*padding: 10px;*/
+            padding: 10px;
         }
         & a{
             color: white;
@@ -38,6 +38,17 @@ header{
     transition: color 0.3s ease-in-out; 
 }
 
+*/
+
+a{
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s ease-in-out;
+}
+
+a:hover{
+    color: #FFC700;
+}
 
 .active {
     color: #FFC700;
